--- a/src/sass/components/_snowflake.scss
+++ b/src/sass/components/_snowflake.scss
@@ -4,34 +4,61 @@
 	position: absolute;
 	width:20%;
 	cursor: pointer;
-	// @include transform( translate(-50%,-50%) );
+	@include transform( translate(-50%,-50%) );
 
 	&:hover{
 		@include transition(width, 1s);
 	}
+	& > *{
+		@include transition(color, 1s);
+	}
 	
 }/* close: .snowflake */
 
+@include keyframes(live-snowlake-one) {
+  0%   { @include transform(rotate(0deg)); }
+  100% { @include transform(rotate(360deg)); }
+}
 .snowflakeOne{
+	// @include animation('live-snowlake-one 350s infinite');
 	z-index: 4;
 	width:20%;
 	&:hover{
  		width:21%;
+ 		& > *{
+			color:$blue;
+		}
  	}
 }
 
+@include keyframes(live-snowlake-two) {
+  0%   { @include transform(rotate(270deg)); }
+  100% { @include transform(rotate(-90deg)); }
+}
 .snowflakeTwo{
+	// @include animation('live-snowlake-two 250s infinite');
 	z-index: 2;
 	width:15%;	
 	&:hover{
  		width:16%;
+ 		& > *{
+			color:$light-blue;
+		}
  	}
 }
 
+@include keyframes(live-snowlake-three) {
+  0%   { @include transform(rotate(180deg)); }
+  100% { @include transform(rotate(-180deg)); }
+}
 .snowflakeThree{
+	// @include animation('live-snowlake-three 150s infinite');
 	z-index: 2;
 	width:10%;
 	&:hover{
  		width:10.5%;
+ 		& > *{
+			color:$light-blue;
+		}
  	}
 }
