--- a/src/sass/components/global.scss
+++ b/src/sass/components/global.scss
@@ -21,6 +21,15 @@ body{
 	background-attachment: fixed;	
 }
 
+img {
+  opacity: 1;
+  @include transition(opacity, 0.3s);
+}
+
+img[data-src] {
+  opacity: 0;
+}
+
 
 #snowCanvas {
 	width:100%;
